# Garbage-Cleaner

./: .gitignore  CLAUDE.md  README.md  actions.py  main.py  pyproject.toml  review.py  rules.py  scanner.py  triage.py  ui_web.py
eval/: labels.json  run_eval.py
